update swaggerAutogen
